--- a/components/HamburguerMainHome/index.module.scss
+++ b/components/HamburguerMainHome/index.module.scss
@@ -2,19 +2,27 @@
 
 .containerOpacity{
     background-color: $Black;
-    opacity: .75;
+    opacity: 0;
     position: absolute;
     width: 100%;
     height: 100vh;
     z-index: 4;
+    pointer-events: none;
+    transition: opacity ease 0.3s;
+}
+.containerOpacityViwe{
+    opacity: .75;
+    pointer-events: all;
+
 }
 .mainContainerHamburguerHome{
     position: absolute;
     width: 70%;
     height: 100vh;
     z-index: 5;
-    left: 0;
+    left: -300px;
     max-width: 254px;
+    transition: left 0.3s;
     .containerHamburguerHomeUser{
         width: 100%;
         height: 100px;
@@ -25,4 +33,7 @@
         height: 100%;
         background-color: $Light-Black;
     }
+}
+.mainContainerHamburguerHomeMove{
+    left: 0;
 }
