--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -82,6 +82,7 @@
     opacity: 0;
     pointer-events: none;
     transition: opacity ease 0.3s;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .infoBtnAddTransaccionView{
     pointer-events: all;
