--- a/components/HamburguerMainHome/index.module.scss
+++ b/components/HamburguerMainHome/index.module.scss
@@ -1,5 +1,6 @@
 @import '../../styles/abstracts/variables.scss';
 
+
 .containerOpacity{
     background-color: $Black;
     opacity: 0;
@@ -10,6 +11,7 @@
     pointer-events: none;
     transition: opacity ease 0.3s;
 }
+
 .containerOpacityViwe{
     opacity: .75;
     pointer-events: all;
@@ -18,22 +20,37 @@
 .mainContainerHamburguerHome{
     position: absolute;
     width: 70%;
-    height: 100vh;
+    height: 100%;
     z-index: 5;
     left: -300px;
     max-width: 254px;
     transition: left 0.3s;
     .containerHamburguerHomeUser{
         width: 100%;
-        height: 100px;
+        height: 62px;
         background-color: $Main-Blue;
     }
     .containerHamburguerHomeCategories{
         width: 100%;
-        height: 100%;
+        height: calc(100% - 62px);
         background-color: $Light-Black;
     }
 }
 .mainContainerHamburguerHomeMove{
     left: 0;
+}
+@media(min-width:1200px){
+    .mainContainerHamburguer{
+    width: 254px;
+    height: 100%;
+    }
+    .containerOpacity{
+        display: none;
+    }
+    .mainContainerHamburguerHome{
+        position: sticky;
+        width: 254px;
+        z-index: 0;
+        left: 0;
+    }
 }
