--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     width: 100%;
     height: 100vh;
-    background: linear-gradient(to bottom, $Main-Blue 0%, $Main-Blue 30%, $Black 30%, $Black  100%)
+   background-color: $Black;
 }
 .containerNavVisionGeneral{
     display: flex;
@@ -15,6 +15,7 @@
     color: $White;
     align-items: center;
     justify-content: flex-start;
+    background-color: $Main-Blue;
 }
 .NavVisionGeneralIconBars{
     font-size: 24px;
@@ -88,5 +89,51 @@
     pointer-events: all;
     opacity: 1;
 }
+@keyframes leftToRigth{
+    0%{
+        right: 10px;
+    }
+    50%{
+        right: 5px;
+    }
+    100%{
+        right: 10px;
+    }
+}
+.infoPTransaccionDesktop{
+    display: none;
+    position: absolute;
+    background-color: $Light-Black;
+    color: $White;
+    right: 10px;
+    padding: 4px 20px 4px 4px;
+    clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 0 50%, 0% 0%);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    z-index: 3;
+    cursor: pointer;
+    animation-name: leftToRigth;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: normal;
+}
+.infoPTransaccionDesktopNoView{
+    opacity: 0;
+    pointer-events: none;
+}
+@media(min-width:1200px){
+    .infoPTransaccionDesktop{
+        display: flex;
+    }
+    .mainContainerVisionGeneral{
+        flex-direction: row;
+    }
+    .containerNavVisionGeneral{
+        height: 100%;
+        max-height: 62px;
 
+    }
+    .NavVisionGeneralIconBars{
+        display: none;
+    }
 
+}
