--- a/components/HamburguerMainHome/index.module.scss
+++ b/components/HamburguerMainHome/index.module.scss
@@ -28,7 +28,15 @@
     .containerHamburguerHomeUser{
         width: 100%;
         height: 62px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: $White;
         background-color: $Main-Blue;
+        p{
+            font-size: 18px;
+            font-weight: 500;
+        }
     }
     .containerHamburguerHomeCategories{
         width: 100%;
@@ -52,5 +60,8 @@
         width: 254px;
         z-index: 0;
         left: 0;
+    }
+    .containerHamburguerHomeUser{
+        border-right: 3px solid $White;
     }
 }
