--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -7,6 +7,12 @@
     height: 100vh;
    background-color: $Black;
 }
+.mainContainerNavVisionGeneral{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
 .containerNavVisionGeneral{
     display: flex;
     flex-direction: row;
@@ -16,6 +22,11 @@
     align-items: center;
     justify-content: flex-start;
     background-color: $Main-Blue;
+}
+.mainContainerVisionGeneral{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
 }
 .NavVisionGeneralIconBars{
     font-size: 24px;
