--- a/components/CardResumenHome/index.module.scss
+++ b/components/CardResumenHome/index.module.scss
@@ -2,13 +2,13 @@
 
 .mainContainerCardResumen{
     width: 100%;
-    max-width: 254px;
+    max-width: 300px;
     height: max-content;
     background-color: $Light-Black;
     display: flex;
     flex-direction: column;
     border-radius: 20px;
-    padding: 20px;
+    padding: 10px;
     .mainContainerCardTitle{
         font-size: 18px;
         font-weight: 500;
@@ -19,6 +19,36 @@
         font-size: 14px;
         font-weight: 500;
         color: $White;
-        padding: 10px 0;
+        padding: 5px 0;
+    }
+    .mainContainerCardEntryAndSpent{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-start;
+        gap: 10px;
+        .containerChartCardResumen{
+            display: flex;
+            flex-direction: column;
+            height: 100px;
+            width: 100px;
+        }
+        .containerPricesCardResumen{
+            display: flex;
+            flex-direction: row;
+            gap: 10px;
+            .containerInfoEntrysOrSpents{
+                color: $White;
+            }
+            .pInfoCardEntry{
+                color: $Green;
+            }
+            .pInfoCardSpent{
+                color: $Red;
+            }
+            .pInfoResult{
+                color: $White;
+            }
+        }
     }
 }
