--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -23,10 +23,11 @@
     justify-content: flex-start;
     background-color: $Main-Blue;
 }
-.mainContainerVisionGeneral{
+.mainContainerVisionGeneralTwo{
     display: flex;
     flex-direction: column;
     width: 100%;
+    padding: 10px;
 }
 .NavVisionGeneralIconBars{
     font-size: 24px;
@@ -69,13 +70,13 @@
 }
 
 .btnAddTransaccionSpent{
-    background-color: red;
+    background-color: $Red;
     z-index: 2;
     transition: all 0.5s;
 
 }
 .btnAddTransaccionEntry{
-    background-color: green;
+    background-color: $Green;
     z-index: 1;
     transition: all 0.5s;
 }
