--- a/components/CardResumenHome/index.module.scss
+++ b/components/CardResumenHome/index.module.scss
@@ -2,8 +2,9 @@
 
 .mainContainerCardResumen{
     width: 100%;
-    max-width: 300px;
-    height: max-content;
+    max-width: 400px;
+    height: 35%;
+    min-height: 200px;
     background-color: $Light-Black;
     display: flex;
     flex-direction: column;
@@ -16,7 +17,7 @@
         text-align: center;
     }
     .mainContainerCardMonth{
-        font-size: 14px;
+        font-size: 16px;
         font-weight: 500;
         color: $White;
         padding: 5px 0;
@@ -25,7 +26,8 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: flex-start;
+        justify-content: center;
+        height: 100%;
         gap: 10px;
         .containerChartCardResumen{
             display: flex;
