--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -27,7 +27,9 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: 100%;
     padding: 10px;
+    align-items: center;
 }
 .NavVisionGeneralIconBars{
     font-size: 24px;
