--- a/styles/base/globals.css
+++ b/styles/base/globals.css
@@ -1,5 +1,6 @@
 html,
 body {
+  height: max-content;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
