--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -27,7 +27,8 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100vh;
+    height: 100%;
+    min-height: 100vh;
     padding: 10px;
     align-items: center;
 }
