add card transaccions home

--- a/components/CardTransaccions/index.module.scss
+++ b/components/CardTransaccions/index.module.scss
@@ -17,4 +17,8 @@
         font-weight: 500;
         font-size: 18px;
     }
+    .containerModalTransaccions{
+        display: flex;
+        flex-direction: column;
+    }
 }
