--- a/components/AddTransaccionModal/SelectCategory.module.scss
+++ b/components/AddTransaccionModal/SelectCategory.module.scss
@@ -1,10 +1,46 @@
 @import '../../styles/abstracts/variables.scss';
 
 .containerOpacity{
-    position: absolute;
+    position: fixed;
     z-index: 6;
     width: 100%;
     height: 100%;
-    top:0;
+    top:-100%;
     left: 0;
+    background-color: $Black;
+    opacity: 0.35;
+    transition: top ease 0.5s;
+}
+.containerOpacityVisible{
+    top: 0;
+}
+.mainContainerSelectCategory{
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    width: 80%;
+    background-color: $Light-Black;
+    top: -300px;
+    z-index: 6;
+    left: calc(50% - 40%);
+    transition: top ease 0.5s;
+    padding: 10px;
+    border-radius: 10px;
+    .titleContainerSelectCategory{
+        color: $White;
+        font-size: 20px;
+        font-weight: 500;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+}
+.mainContainerSelectCategoryVisible{
+    top: 60px;
+}
+@media(min-width:840px){
+    .mainContainerSelectCategory{
+        max-width: 500px;
+        left: calc(50% - 250px);
+    }
+
 }
