--- a/components/AddTransaccionModal/index.module.scss
+++ b/components/AddTransaccionModal/index.module.scss
@@ -51,6 +51,17 @@
                 display: flex;
                 flex-direction: column;
                 margin: 10px 0;
+                .containerImgAndCategory{
+                    display: flex;
+                    flex-direction: row;
+                    gap: 5px;
+                    position: relative;
+                    img{
+                        position: absolute;
+                        left: -55px;
+                        top: -5px;
+                    }
+                }
                 label{
                     width: max-content;
                     margin: 0 auto;
