--- a/components/AddTransaccionModal/SelectCategory.module.scss
+++ b/components/AddTransaccionModal/SelectCategory.module.scss
@@ -19,8 +19,10 @@
     flex-direction: column;
     position: fixed;
     width: 80%;
+    height: 100%;
+    max-height: 400px;
     background-color: $Light-Black;
-    top: -300px;
+    top: -100%;
     z-index: 6;
     left: calc(50% - 40%);
     transition: top ease 0.5s;
@@ -32,6 +34,13 @@
         font-weight: 500;
         text-align: center;
         margin-bottom: 10px;
+    }
+    .containerSelectCategory{
+        display: flex;
+        flex-direction: column;
+        overflow-y: auto;
+        width: 100%;
+        height: 100%;
     }
 }
 .mainContainerSelectCategoryVisible{
