--- a/components/AddTransaccionModal/index.module.scss
+++ b/components/AddTransaccionModal/index.module.scss
@@ -25,6 +25,17 @@
     box-shadow: rgba(0, 0, 0, 0.1) 0px 5px 15px;
     z-index: 5;
     transition: top ease 0.5s;
+    .containerLoader{
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        top: 0;
+        left: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
     .titleContainerAddTransaccionModal{
         color: $White;
         font-size: 22px;
