--- a/components/ChartOfAccounts/index.module.scss
+++ b/components/ChartOfAccounts/index.module.scss
@@ -2,6 +2,7 @@
 
 .mainContainerChartOfAccounts{
     width: 100%;
+    min-width: 280px;
     max-width: 400px;
     min-height: max-content;
     background-color: $Light-Black;
