--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -31,6 +31,16 @@
     min-height: 100vh;
     padding: 10px;
     align-items: center;
+    @media (min-width:900px) {
+        display: grid;
+        max-width: 900px;
+        margin: 0 auto;
+        min-width: max-content;
+        grid-template-columns: 1fr 1fr;
+        align-content: flex-start;
+        justify-items: center;
+        gap: 20px;        
+    }
 }
 .NavVisionGeneralIconBars{
     font-size: 24px;
