--- a/components/ErrorLoginAndRegister/index.module.scss
+++ b/components/ErrorLoginAndRegister/index.module.scss
@@ -14,6 +14,7 @@
     justify-content: center;
     padding: 20px;
     transition: top ease 1s;
+    z-index: 999;
     .errorMessage{
         color: $Black;
         font-weight: 500;
