--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -17,6 +17,7 @@
     display: flex;
     flex-direction: row;
     width: 100%;
+    max-height: 62px;
     padding: 15px;
     color: $White;
     align-items: center;
