--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -4,8 +4,9 @@
     width: 100%;
     height: 100%;
     min-height: 100vh;
-    padding: 10px;
+    padding: 30px 10px 10px 10px;
     align-items: center;
+    gap: 15px;
     @media (min-width:900px) {
         display: grid;
         max-width: 900px;
