--- a/styles/pages/Transactions.module.scss
+++ b/styles/pages/Transactions.module.scss
@@ -6,9 +6,9 @@
     width: 100%;
     height: 100%;
     min-height: 100vh;
-    padding: 10px;
+    padding: 30px 10px 10px 10px;
     align-items: center;
-    gap: 10px;
+    gap: 20px;
     .containerNavMonthsAndYears{
         margin: 0 auto;
         display: flex;
