working in update picture user

--- a/components/AddTransaccionModal/ModalCategory.module.scss
+++ b/components/AddTransaccionModal/ModalCategory.module.scss
@@ -5,6 +5,7 @@
     flex-direction: column;
     justify-content: space-between;
     cursor: pointer;
+    margin: 5px 0;
     .containerModalCategory{
         display: flex;
         flex-direction: row;
