--- a/components/UserLogOut/index.module.scss
+++ b/components/UserLogOut/index.module.scss
@@ -30,6 +30,7 @@
             padding: 10px;
             color: $Black;
             border-radius: 20px;
+            gap: 10px;
             .infoContainerUserLogOut{
                 color: $Black;
                 font-size: 18px;
