--- a/styles/pages/Layout.module.scss
+++ b/styles/pages/Layout.module.scss
@@ -23,6 +23,8 @@
     align-items: center;
     justify-content: space-between;
     background-color: $Main-Blue;
+    top: 0;
+    position: sticky;
     .containerIconAndTitle{
         display: flex;
         flex-direction: row;
