--- a/components/AddTransaccionModal/ModalSubCategory.module.scss
+++ b/components/AddTransaccionModal/ModalSubCategory.module.scss
@@ -4,7 +4,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    padding: 10px 40px;
+    padding: 0 10px;
+    margin: 10px 30px;
     gap: 10px;
     .titleContainerModalSubCategory{
         color: $White;
