--- a/components/HamburguerMainHome/index.module.scss
+++ b/components/HamburguerMainHome/index.module.scss
@@ -1,10 +1,9 @@
 @import '../../styles/abstracts/variables.scss';
 
-
 .containerOpacity{
     background-color: $Black;
     opacity: 0;
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100vh;
     z-index: 4;
@@ -12,15 +11,16 @@
     transition: opacity ease 0.3s;
 }
 
-.containerOpacityViwe{
+.containerOpacityView{
     opacity: .75;
     pointer-events: all;
 
 }
 .mainContainerHamburguerHome{
-    position: absolute;
+    position: fixed;
     width: 70%;
     height: 100%;
+    min-height: 100%;
     z-index: 5;
     left: -300px;
     max-width: 254px;
@@ -65,14 +65,18 @@
 }
 @media(min-width:1200px){
     .mainContainerHamburguer{
-    width: 254px;
-    min-height: 100%;
+        width: 254px;
+        height: 100%;
+        min-width: 254px;
+        min-height: 100%;
     }
     .containerOpacity{
         display: none;
     }
     .mainContainerHamburguerHome{
-        position: sticky;
+        position: fixed;
+        height: 100%;
+        top: 0;
         width: 254px;
         z-index: 0;
         left: 0;
