--- a/styles/pages/Transactions.module.scss
+++ b/styles/pages/Transactions.module.scss
@@ -1,4 +1,4 @@
-@import '../../styles/abstracts/variables.scss';
+@import '../abstracts/variables.scss';
 
 .mainContainerTransactions{
     display: flex;
