--- a/components/UpdateUserInputs/index.module.scss
+++ b/components/UpdateUserInputs/index.module.scss
@@ -17,6 +17,7 @@
     }
     .containerUpdate{
         display: flex;
+        position: relative;
         flex-direction: column;
         width: 100%;
         margin-top: 10px;
@@ -35,6 +36,10 @@
         .errorMessage{
             font-size: 16px;
             color: $Red;
+        }
+        .containerLoader{
+            position: absolute;
+            left: calc(50% - 20px);
         }
     }
     .containerBtnSaveAndCancel{
