--- a/components/UserLogOut/index.module.scss
+++ b/components/UserLogOut/index.module.scss
@@ -4,12 +4,15 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: $White;
     border-radius: 20px;
     width: max-content;
     height: max-content;
     cursor: pointer;
-    padding: 8px;
+    border: 2px solid $White;
+    img{
+        border-radius: 20px;
+        object-fit: cover;
+    }
     &:hover .blockUserLogOut{
         opacity: 1;
         pointer-events: initial;
