--- a/components/UserLogOut/index.module.scss
+++ b/components/UserLogOut/index.module.scss
@@ -4,13 +4,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border-radius: 20px;
+    border-radius: 50%;
     width: max-content;
     height: max-content;
     cursor: pointer;
     border: 2px solid $White;
     img{
-        border-radius: 20px;
+        border-radius: 50%;
         object-fit: cover;
     }
     &:hover .blockUserLogOut{
