add loaders home

--- a/components/BalanceCard/index.module.scss
+++ b/components/BalanceCard/index.module.scss
@@ -32,5 +32,8 @@
         flex-direction: column;
         width: 100%;
         height: max-content;
+        .containerLoaderBalance{
+            margin: 10px auto;
+        }
     }
 }
