--- a/components/LoadingLading/index.module.scss
+++ b/components/LoadingLading/index.module.scss
@@ -11,4 +11,7 @@
     justify-content: center;
     background-color: $Light-Black;
     z-index: 999;
+    img{
+        margin-bottom: 15px;
+    }
 }
