add private routes

--- a/styles/pages/Register.module.scss
+++ b/styles/pages/Register.module.scss
@@ -9,6 +9,7 @@
     .containerRegisterNav{
         display: flex;
         flex-direction: row;
+        height: max-content;
         padding: 10px;
         min-height: 62px;
         align-items: center;
@@ -16,7 +17,7 @@
         justify-content: space-between;
         @media(max-width:546px){
             flex-direction: column;
-            gap: 20px;
+            gap: 10px;
             justify-content: center;
             padding: 15px;
 
