--- a/components/AddTransaccionModal/index.module.scss
+++ b/components/AddTransaccionModal/index.module.scss
@@ -10,9 +10,11 @@
     opacity: 0.75;
     z-index: 5;
     transition: top ease 0.5s;
+    visibility: hidden;
 }
 .containerOpacityVisible{
     top: 0;
+    visibility: visible;
 }
 .mainContainerAddTransaccionModal{
     display: flex;
@@ -26,6 +28,7 @@
     box-shadow: rgba(0, 0, 0, 0.1) 0px 5px 15px;
     z-index: 5;
     transition: top ease 0.5s;
+    visibility: hidden;
     .containerLoader{
         position: absolute;
         height: 100%;
@@ -162,6 +165,7 @@
 }
 .mainContainerAddTransaccionModaVisible{
     top: 0;
+    visibility: visible;
 }
 @media(min-width:840px){
     .mainContainerAddTransaccionModal{
