--- a/styles/pages/Layout.module.scss
+++ b/styles/pages/Layout.module.scss
@@ -25,6 +25,7 @@
     background-color: $Main-Blue;
     top: 0;
     position: sticky;
+    z-index: 3;
     .containerIconAndTitle{
         display: flex;
         flex-direction: row;
