fix loaders home

--- a/components/CardResumenHome/index.module.scss
+++ b/components/CardResumenHome/index.module.scss
@@ -53,5 +53,10 @@
                 color: $White;
             }
         }
+        .containerLoaderResume{
+            width: max-content;
+            height: max-content;
+            margin: 10px auto
+        }
     }
 }
