--- a/components/ChartOfAccounts/index.module.scss
+++ b/components/ChartOfAccounts/index.module.scss
@@ -30,4 +30,9 @@
             color: $Green;
         }
     }
+    .containerLoaderChartOfAccounts{
+        width: max-content;
+        height: max-content;
+        margin: 10px auto
+    }
 }
