--- a/components/BalanceCard/index.module.scss
+++ b/components/BalanceCard/index.module.scss
@@ -32,8 +32,16 @@
         flex-direction: column;
         width: 100%;
         height: max-content;
+        position: relative;
         .containerLoaderBalance{
-            margin: 10px auto;
+            position: absolute;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
         }
     }
 }
