--- a/components/UserLogOut/index.module.scss
+++ b/components/UserLogOut/index.module.scss
@@ -1,44 +1,47 @@
-@import '../../styles/abstracts/variables.scss';
-.mainContainerUserLogOut{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+@import "../../styles/abstracts/variables.scss";
+.mainContainerUserLogOut {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  width: max-content;
+  height: max-content;
+  cursor: pointer;
+  border: 2px solid $White;
+  img {
     border-radius: 50%;
-    width: max-content;
-    height: max-content;
-    cursor: pointer;
-    border: 2px solid $White;
-    img{
-        border-radius: 50%;
-        object-fit: cover;
-    }
-    &:hover .blockUserLogOut{
-        opacity: 1;
-        pointer-events: initial;
-    }
-    .blockUserLogOut{
-        position: absolute;
-        background-color: transparent;
-        opacity: 0;
-        top: 50px;
-        padding-top: 10px;
-        right: 8px;
-        pointer-events: none;
-        transition: opacity ease 0.2s;
-        .containerUserLogOut{
-            display: flex;
-            flex-direction: column;
-            background-color: $White;
-            padding: 10px;
-            color: $Black;
-            border-radius: 20px;
-            gap: 10px;
-            .infoContainerUserLogOut{
-                color: $Black;
-                font-size: 18px;
-                font-weight: 500;
-            }
+    object-fit: cover;
+  }
+  &:hover .blockUserLogOut {
+    opacity: 1;
+    pointer-events: initial;
+  }
+  .blockUserLogOut {
+    position: absolute;
+    background-color: transparent;
+    opacity: 0;
+    top: 50px;
+    padding-top: 10px;
+    right: 8px;
+    pointer-events: none;
+    transition: opacity ease 0.2s;
+    .containerUserLogOut {
+      display: flex;
+      flex-direction: column;
+      background-color: $White;
+      padding: 10px;
+      color: $Black;
+      border-radius: 20px;
+      gap: 10px;
+      .infoContainerUserLogOut {
+        color: $Black;
+        font-size: 18px;
+        font-weight: 500;
+        &:hover {
+          color: $Main-Blue;
         }
+      }
     }
-    }
+  }
+}
